Preparation for running everything again

--- a/experiments/plot-benchmark-results--optimizations.ipynb
+++ b/experiments/plot-benchmark-results--optimizations.ipynb
@@ -191,7 +191,7 @@
    ],
    "source": [
     "optimization = \"projection_push_up\"\n",
-    "variant_counts = [2, 4]\n",
+    "variant_counts = [2, 4, 6]\n",
     "row_count = \"1.0\"\n",
     "ideal_df = load_csv_result_data_variant_counts(optimization, \"ideal\", variant_counts, row_count)\n",
     "average_df = load_csv_result_data_variant_counts(optimization, \"average\", variant_counts, row_count)\n",
@@ -226,7 +226,7 @@
    ],
    "source": [
     "optimization = \"udf_split_and_reuse\"\n",
-    "variant_counts = [2, 4]\n",
+    "variant_counts = [2, 4, 6]\n",
     "row_count = \"1.0\"\n",
     "ideal_df = load_csv_result_data_variant_counts(optimization, \"ideal\", variant_counts, row_count)\n",
     "average_df = load_csv_result_data_variant_counts(optimization, \"average\", variant_counts, row_count)\n",
@@ -261,7 +261,7 @@
    ],
    "source": [
     "optimization = \"filter_addition_push_up\"\n",
-    "variant_counts = [2, 4]\n",
+    "variant_counts = [2, 4, 6]\n",
     "row_count = \"1.0\"\n",
     "ideal_df = load_csv_result_data_variant_counts(optimization, \"ideal\", variant_counts, row_count)\n",
     "average_df = load_csv_result_data_variant_counts(optimization, \"average\", variant_counts, row_count)\n",
@@ -298,7 +298,7 @@
    ],
    "source": [
     "optimization = \"operator_deletion_filter_push_up\"\n",
-    "variant_counts = [2, 4]\n",
+    "variant_counts = [2, 4, 6]\n",
     "row_count = \"1.0\"\n",
     "ideal_df = load_csv_result_data_variant_counts(optimization, \"ideal\", variant_counts, row_count)\n",
     "average_df = load_csv_result_data_variant_counts(optimization, \"average\", variant_counts, row_count)\n",
