Commit before rerunning FDP with 10 variants

--- a/experiments/optimizations/plot-benchmark-results--optimizations.ipynb
+++ b/experiments/optimizations/plot-benchmark-results--optimizations.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
@@ -574,6 +574,18 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1.096662\n",
+      "0    1.139087\n",
+      "0    1.329009\n",
+      "0    1.530723\n",
+      "0    1.609520\n",
+      "Name: analysis_result_with_opt_rule, dtype: float64\n"
+     ]
     }
    ],
    "source": [
@@ -590,7 +602,8 @@
     "               'most filters not worth pushing up;most filters not worth pushing up: CSE only': (worst_case_only_some_filters_worth_pushing_up_df['analysis_result_with_opt_rule'], worst_case_only_some_filters_worth_pushing_up_df['analysis_result_without_any_opt'])\n",
     "               },\n",
     "              variant_counts,\n",
-    "              f\"{optimization}_special_scenarios\")"
+    "              f\"{optimization}_special_scenarios\")\n",
+    "print(worst_case_only_some_filters_worth_pushing_up_df['analysis_result_with_opt_rule'])"
    ],
    "metadata": {
     "collapsed": false,
