--- a/experiments/instrumentation/plot-benchmark-results--instrumentation.ipynb
+++ b/experiments/instrumentation/plot-benchmark-results--instrumentation.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -309,6 +309,10 @@
       "all datasets: median pipeline runtime without mlwhatif: 2245.92\n",
       "all datasets: median overhead with tracking: 207.85000000000002\n",
       "all datasets: median overhead without tracking: 29.625\n",
+      "\n",
+      "all datasets: p5 pipeline runtime without mlwhatif: 360.7705000000001\n",
+      "all datasets: p5 overhead with tracking: 146.05\n",
+      "all datasets: p5 overhead without tracking: 10.494499999999999\n",
       "\n",
       "all datasets: min pipeline runtime without mlwhatif: 229.29\n",
       "all datasets: min overhead with tracking: -206.56\n",
@@ -338,6 +342,11 @@
     "print(f\"all datasets: median overhead without tracking: {median_results['median_overhead_without_tracking_vs_main_func'].median()}\")\n",
     "print()\n",
     "\n",
+    "print(f\"all datasets: p5 pipeline runtime without mlwhatif: {median_results['median_total_exec_duration_without_instrum_main_func'].quantile(.05)}\")\n",
+    "print(f\"all datasets: p5 overhead with tracking: {median_results['median_overhead_with_tracking_vs_main_func'].quantile(.05)}\")\n",
+    "print(f\"all datasets: p5 overhead without tracking: {median_results['median_overhead_without_tracking_vs_main_func'].quantile(.05)}\")\n",
+    "print()\n",
+    "\n",
     "print(f\"all datasets: min pipeline runtime without mlwhatif: {median_results['median_total_exec_duration_without_instrum_main_func'].min()}\")\n",
     "print(f\"all datasets: min overhead with tracking: {median_results['median_overhead_with_tracking_vs_main_func'].min()}\")\n",
     "print(f\"all datasets: min overhead without tracking: {median_results['median_overhead_without_tracking_vs_main_func'].min()}\")\n",
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -373,6 +382,10 @@
       "without reviews: median pipeline runtime without mlwhatif: 1903.335\n",
       "without reviews: median overhead with tracking: 198.68\n",
       "without reviews: median overhead without tracking: 29.625\n",
+      "\n",
+      "without reviews: p5 pipeline runtime without mlwhatif: 337.861\n",
+      "without reviews: p5 overhead with tracking: 145.31\n",
+      "without reviews: p5 overhead without tracking: 16.8005\n",
       "\n",
       "without reviews: min pipeline runtime without mlwhatif: 229.29\n",
       "without reviews: min overhead with tracking: 128.92\n",
@@ -403,10 +416,15 @@
     "print(f\"without reviews: median overhead without tracking: {without_reviews['median_overhead_without_tracking_vs_main_func'].median()}\")\n",
     "print()\n",
     "\n",
+    "print(f\"without reviews: p5 pipeline runtime without mlwhatif: {without_reviews['median_total_exec_duration_without_instrum_main_func'].quantile(.05)}\")\n",
+    "print(f\"without reviews: p5 overhead with tracking: {without_reviews['median_overhead_with_tracking_vs_main_func'].quantile(.05)}\")\n",
+    "print(f\"without reviews: p5 overhead without tracking: {without_reviews['median_overhead_without_tracking_vs_main_func'].quantile(.05)}\")\n",
+    "print()\n",
+    "\n",
     "print(f\"without reviews: min pipeline runtime without mlwhatif: {without_reviews['median_total_exec_duration_without_instrum_main_func'].min()}\")\n",
     "print(f\"without reviews: min overhead with tracking: {without_reviews['median_overhead_with_tracking_vs_main_func'].min()}\")\n",
     "print(f\"without reviews: min overhead without tracking: {without_reviews['median_overhead_without_tracking_vs_main_func'].min()}\")\n",
-    "print()\n"
+    "print()"
    ],
    "metadata": {
     "collapsed": false,
@@ -417,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -438,6 +456,10 @@
       "only reviews: median pipeline runtime without mlwhatif: 9019.310000000001\n",
       "only reviews: median overhead with tracking: 246.81\n",
       "only reviews: median overhead without tracking: 28.369999999999997\n",
+      "\n",
+      "only reviews: p5 pipeline runtime without mlwhatif: 5168.529\n",
+      "only reviews: p5 overhead with tracking: 211.171\n",
+      "only reviews: p5 overhead without tracking: -95.12299999999999\n",
       "\n",
       "only reviews: min pipeline runtime without mlwhatif: 4900.39\n",
       "only reviews: min overhead with tracking: -206.56\n",
@@ -466,6 +488,11 @@
     "print(f\"only reviews: median pipeline runtime without mlwhatif: {only_reviews['median_total_exec_duration_without_instrum_main_func'].median()}\")\n",
     "print(f\"only reviews: median overhead with tracking: {only_reviews['median_overhead_with_tracking_vs_main_func'].median()}\")\n",
     "print(f\"only reviews: median overhead without tracking: {only_reviews['median_overhead_without_tracking_vs_main_func'].median()}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"only reviews: p5 pipeline runtime without mlwhatif: {only_reviews['median_total_exec_duration_without_instrum_main_func'].quantile(.05)}\")\n",
+    "print(f\"only reviews: p5 overhead with tracking: {only_reviews['median_overhead_with_tracking_vs_main_func'].quantile(.05)}\")\n",
+    "print(f\"only reviews: p5 overhead without tracking: {only_reviews['median_overhead_without_tracking_vs_main_func'].quantile(.05)}\")\n",
     "print()\n",
     "\n",
     "print(f\"only reviews: min pipeline runtime without mlwhatif: {only_reviews['median_total_exec_duration_without_instrum_main_func'].min()}\")\n",
