Added code to look at mqo duration in end-to-end experiments

--- a/experiments/end_to_end/plot-benchmark-results--end-to-end-28-09-2022.ipynb
+++ b/experiments/end_to_end/plot-benchmark-results--end-to-end-28-09-2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def load_csv_results():\n",
@@ -43,6 +43,11 @@
     "                        new_df['median_no_opt'] = median_no_opt\n",
     "                        median_opt = new_df['total_exec_duration_with_opt'].median()\n",
     "                        new_df['median_opt'] = median_opt\n",
+    "                        new_df['median_opt_plan_generation'] = new_df['opt_what_if_plan_generation'].median()\n",
+    "                        new_df['median_opt_mqo'] = new_df['opt_what_if_query_optimization_duration'].median()\n",
+    "                        new_df['median_opt_other_runtime'] = new_df['total_exec_duration_with_opt'].median() - \\\n",
+    "                                                             new_df['opt_original_pipeline_without_importing_and_monkeypatching'].median() - \\\n",
+    "                                                             new_df['opt_original_pipeline_importing_and_monkeypatching'].median() - new_df['opt_what_if_execution'].median()\n",
     "                        median_speedup = median_no_opt / median_opt\n",
     "                        new_df['median_speedup'] = median_speedup\n",
     "                        new_df['opt_original_pipeline_estimated'] = new_df['opt_original_pipeline_estimated'].median()\n",
@@ -67,6 +72,7 @@
     "                        new_df = new_df[['median_no_opt', 'median_opt', 'median_speedup', 'median_original_with_instrum',\n",
     "                                         'median_speedup_excluding_model_training',\n",
     "                                         'median_no_opt_wo_orig', 'median_opt_wo_orig',\n",
+    "                                         'median_opt_plan_generation', 'median_opt_mqo', 'median_opt_other_runtime',\n",
     "                                         'opt_original_pipeline_estimated', 'variant_count_including_orig',\n",
     "                                         'max_possible_speedup', 'scenario', 'dataset',\n",
     "                                         'data_loading', 'featurization', 'model']]\n",
@@ -88,6 +94,11 @@
     "                        new_df['median_no_opt'] = median_no_opt\n",
     "                        median_opt = new_df['total_exec_duration_with_opt'].median()\n",
     "                        new_df['median_opt'] = median_opt\n",
+    "                        new_df['median_opt_plan_generation'] = new_df['opt_what_if_plan_generation'].median()\n",
+    "                        new_df['median_opt_mqo'] = new_df['opt_what_if_query_optimization_duration'].median()\n",
+    "                        new_df['median_opt_other_runtime'] = new_df['total_exec_duration_with_opt'].median() - \\\n",
+    "                                                             new_df['opt_original_pipeline_without_importing_and_monkeypatching'].median() - \\\n",
+    "                                                             new_df['opt_original_pipeline_importing_and_monkeypatching'].median() - new_df['opt_what_if_execution'].median()\n",
     "                        median_speedup = median_no_opt / median_opt\n",
     "                        new_df['median_speedup'] = median_speedup\n",
     "                        new_df['opt_original_pipeline_estimated'] = new_df['opt_original_pipeline_estimated'].median()\n",
@@ -112,6 +123,7 @@
     "                        new_df = new_df[['median_no_opt', 'median_opt', 'median_speedup', 'median_original_with_instrum',\n",
     "                                         'median_speedup_excluding_model_training',\n",
     "                                         'median_no_opt_wo_orig', 'median_opt_wo_orig',\n",
+    "                                         'median_opt_plan_generation', 'median_opt_mqo', 'median_opt_other_runtime',\n",
     "                                         'opt_original_pipeline_estimated', 'variant_count_including_orig',\n",
     "                                         'max_possible_speedup', 'scenario', 'dataset',\n",
     "                                         'data_loading', 'featurization', 'model']]\n",
@@ -132,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "median_results = load_csv_results()"
@@ -1094,7 +1106,86 @@
     "pretty_scenario_names['scenario'] = pretty_scenario_names['scenario'].map(scenario_names)\n",
     "pretty_scenario_names['dataset'] = pretty_scenario_names['dataset'].map(data_set_join_info_map)\n",
     "pretty_scenario_names['featurization'] = pretty_scenario_names['featurization'].map(featurization_map)\n",
-    "speedup_box_plot(pretty_scenario_names, 'speedup_wo_training_per_dataset_per_featurization_without_outliers', False, 'dataset', 'featurization', 'median_speedup_excluding_model_training', False)\n"
+    "speedup_box_plot(pretty_scenario_names, 'speedup_wo_training_per_dataset_per_featurization_without_outliers', False, 'dataset', 'featurization', 'median_speedup_excluding_model_training', False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max other runtime is calculated by using total runtime, substracting orig execution and instrumentation, and substracting what-if combined plan execution\n",
+      "\n",
+      "all datasets: max optimization duration: 293.28\n",
+      "all datasets: max variant generation: 7.67\n",
+      "all datasets: max other runtime: 741.72\n",
+      "\n",
+      "all datasets: p95 optimization duration: 243.29349999999988\n",
+      "all datasets: p95 variant generation: 5.6385\n",
+      "all datasets: p95 other runtime: 373.1484999999999\n",
+      "\n",
+      "all datasets: p90 optimization duration: 202.957\n",
+      "all datasets: p90 variant generation: 5.178\n",
+      "all datasets: p90 other runtime: 307.602\n",
+      "\n",
+      "all datasets: median optimization duration: 74.045\n",
+      "all datasets: median variant generation: 0.595\n",
+      "all datasets: median other runtime: 104.905\n",
+      "\n",
+      "all datasets: p5 optimization duration: 10.713000000000001\n",
+      "all datasets: p5 variant generation: 0.12\n",
+      "all datasets: p5 other runtime: 3.3400000000000003\n",
+      "\n",
+      "all datasets: min optimization duration: 1.64\n",
+      "all datasets: min variant generation: 0.09\n",
+      "all datasets: min other runtime: -283.98\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"max other runtime is calculated by using total runtime, substracting orig execution and instrumentation, and \"\n",
+    "      \"substracting what-if combined plan execution\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: max optimization duration: {median_results['median_opt_mqo'].max()}\")\n",
+    "print(f\"all datasets: max variant generation: {median_results['median_opt_plan_generation'].max()}\")\n",
+    "print(f\"all datasets: max other runtime: {median_results['median_opt_other_runtime'].max()}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: p95 optimization duration: {median_results['median_opt_mqo'].quantile(.95)}\")\n",
+    "print(f\"all datasets: p95 variant generation: {median_results['median_opt_plan_generation'].quantile(.95)}\")\n",
+    "print(f\"all datasets: p95 other runtime: {median_results['median_opt_other_runtime'].quantile(.95)}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: p90 optimization duration: {median_results['median_opt_mqo'].quantile(.9)}\")\n",
+    "print(f\"all datasets: p90 variant generation: {median_results['median_opt_plan_generation'].quantile(.9)}\")\n",
+    "print(f\"all datasets: p90 other runtime: {median_results['median_opt_other_runtime'].quantile(.9)}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: median optimization duration: {median_results['median_opt_mqo'].median()}\")\n",
+    "print(f\"all datasets: median variant generation: {median_results['median_opt_plan_generation'].median()}\")\n",
+    "print(f\"all datasets: median other runtime: {median_results['median_opt_other_runtime'].median()}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: p5 optimization duration: {median_results['median_opt_mqo'].quantile(.05)}\")\n",
+    "print(f\"all datasets: p5 variant generation: {median_results['median_opt_plan_generation'].quantile(.05)}\")\n",
+    "print(f\"all datasets: p5 other runtime: {median_results['median_opt_other_runtime'].quantile(.05)}\")\n",
+    "print()\n",
+    "\n",
+    "print(f\"all datasets: min optimization duration: {median_results['median_opt_mqo'].min()}\")\n",
+    "print(f\"all datasets: min variant generation: {median_results['median_opt_plan_generation'].min()}\")\n",
+    "print(f\"all datasets: min other runtime: {median_results['median_opt_other_runtime'].min()}\")\n",
+    "print()"
    ],
    "metadata": {
     "collapsed": false,
