--- a/experiments/manual_analysis/plot-benchmark-results--manual-analysis.ipynb
+++ b/experiments/manual_analysis/plot-benchmark-results--manual-analysis.ipynb
@@ -138,38 +138,38 @@
       "0              103240.51            23844.10                        0.62   \n",
       "0              103240.51            23844.10                        0.62   \n",
       "\n",
-      "   median_opt_mqo  ...  dataset  data_loading    featurization  \\\n",
-      "0           63.32  ...  reviews  fast_loading  featurization_1   \n",
-      "0           63.32  ...  reviews  fast_loading  featurization_1   \n",
-      "0           63.32  ...  reviews  fast_loading  featurization_1   \n",
-      "0           93.38  ...  reviews  fast_loading  featurization_1   \n",
-      "0           93.38  ...  reviews  fast_loading  featurization_1   \n",
-      "0           93.38  ...  reviews  fast_loading  featurization_1   \n",
+      "   median_opt_mqo  ...  max_possible_speedup                  scenario  \\\n",
+      "0           63.32  ...                  13.0  data corruption\\n(jenga)   \n",
+      "0           63.32  ...                  13.0  data corruption\\n(jenga)   \n",
+      "0           63.32  ...                  13.0  data corruption\\n(jenga)   \n",
+      "0           93.38  ...                  10.5  data cleaning\\n(cleanml)   \n",
+      "0           93.38  ...                  10.5  data cleaning\\n(cleanml)   \n",
+      "0           93.38  ...                  10.5  data cleaning\\n(cleanml)   \n",
       "\n",
-      "             model  run    runtime   exec_variant dataset_sort_order  \\\n",
-      "0  log. regression  NaN  118.14102  jenga/cleanml                  4   \n",
-      "0  log. regression  NaN  134.95826  ml-mq no opt.                  4   \n",
-      "0  log. regression  NaN   16.53337     ml-mq opt.                  4   \n",
-      "0  log. regression  NaN   91.84091  jenga/cleanml                  4   \n",
-      "0  log. regression  NaN  103.24051  ml-mq no opt.                  4   \n",
-      "0  log. regression  NaN   23.84410     ml-mq opt.                  4   \n",
+      "   dataset  data_loading    featurization                model    runtime  \\\n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression  118.14102   \n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression  134.95826   \n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression   16.53337   \n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression   91.84091   \n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression  103.24051   \n",
+      "0  reviews  fast_loading  featurization_1  logistic_regression   23.84410   \n",
       "\n",
-      "  scenario_sort_order exec_variant_sort_order  \n",
-      "0                   0                       0  \n",
-      "0                   0                       1  \n",
-      "0                   0                       2  \n",
-      "0                   1                       0  \n",
-      "0                   1                       1  \n",
-      "0                   1                       2  \n",
+      "    exec_variant scenario_sort_order  exec_variant_sort_order  \n",
+      "0  jenga/cleanml                   0                        0  \n",
+      "0  ml-mq no opt.                   0                        1  \n",
+      "0     ml-mq opt.                   0                        2  \n",
+      "0  jenga/cleanml                   1                        0  \n",
+      "0  ml-mq no opt.                   1                        1  \n",
+      "0     ml-mq opt.                   1                        2  \n",
       "\n",
-      "[6 rows x 25 columns]\n"
+      "[6 rows x 23 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1x/7tjtf92157d00yflbr4s67f80000gn/T/ipykernel_42745/3964966650.py:53: MatplotlibDeprecationWarning: hatch must consist of a string of \"*+-./OX\\ox|\" or None, but found the following invalid values \" \". Passing invalid values is deprecated since 3.4 and will become an error two minor releases later.\n",
+      "/var/folders/1x/7tjtf92157d00yflbr4s67f80000gn/T/ipykernel_44319/1540881814.py:31: MatplotlibDeprecationWarning: hatch must consist of a string of \"*+-./OX\\ox|\" or None, but found the following invalid values \" \". Passing invalid values is deprecated since 3.4 and will become an error two minor releases later.\n",
       "  bars = plt.bar([position + 1], np.median(values_to_plot_without), width=1., color=color_without, hatch=\"/  \", edgecolor='white')\n"
      ]
     },
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "def speedup_bar_plot(data, title, with_outliers, group_col_1, group_col_2, plot_column, absolute_times):\n",
+    "def speedup_bar_plot(data, title, group_col_1, group_col_2, plot_column):\n",
     "    fig, ax = plt.subplots()\n",
     "    # ax.set_yscale('log')\n",
     "\n",
@@ -197,7 +197,7 @@
     "    position = 1\n",
     "\n",
     "    def triplewise(iterable):\n",
-    "        \"s -> (s0, s1), (s2, s3), (s4, s5), ...\"\n",
+    "        \"s -> (s0, s1, s3), (s4, s5, s6), ...\"\n",
     "        a = iter(iterable)\n",
     "        return zip(a, a, a)\n",
     "\n",
@@ -213,48 +213,17 @@
     "            filtered2_data_with = filtered1_data[filtered1_data[group_col_2] == group2_val_with]\n",
     "            values_to_plot_with = filtered2_data_with[plot_column]\n",
     "\n",
-    "            # orig_pipeline = filtered2_data_with[orig_pipeline_col]\n",
-    "            # orig_pipeline_without = filtered2_data_without[orig_pipeline_col]\n",
-    "\n",
-    "\n",
     "            if len(values_to_plot_without) > 0:\n",
-    "                # values_diff = values_to_plot_without / values_to_plot_with\n",
-    "                # best_case_arg_index = np.argmax(values_diff)\n",
-    "                # max_without = values_to_plot_without.iloc[best_case_arg_index]\n",
-    "                # max_with = values_to_plot_with.iloc[best_case_arg_index]\n",
-    "\n",
-    "                # orig_pipeline_value = orig_pipeline.iloc[best_case_arg_index]\n",
-    "                # orig_pipeline_value_without = orig_pipeline_without.iloc[best_case_arg_index]\n",
-    "                # assert orig_pipeline_value == orig_pipeline_value_without\n",
-    "\n",
-    "                # bars = plt.bar([position], orig_pipeline_value, width=1., color='black', hatch=\"/\", edgecolor='white')\n",
     "                bars = plt.bar([position], np.median(values_to_plot_manual), width=1., color=color_manual, hatch=\"//\", edgecolor='white')\n",
-    "                # access the bar attributes to place the text in the appropriate location\n",
-    "                # for bar in bars:\n",
-    "                #     yval = bar.get_height()\n",
-    "                #     plus_y_loc = 5\n",
-    "                #     if max_with + 5 >= max_without:\n",
-    "                #         plus_y_loc = 15\n",
-    "                #     plt.text(bar.get_x(), yval + plus_y_loc, round(yval))\n",
-    "                # bars = plt.bar([position + 1], orig_pipeline_value, width=1., color='black', hatch=None, edgecolor='white')\n",
     "                bars = plt.bar([position + 1], np.median(values_to_plot_without), width=1., color=color_without, hatch=\"/  \", edgecolor='white')\n",
     "                bars = plt.bar([position + 2], np.median(values_to_plot_with), width=1., color=color_with, hatch=None, edgecolor='white')\n",
-    "                # for bar in bars:\n",
-    "                #     yval = bar.get_height()\n",
-    "                #     plt.text(bar.get_x(), yval + 5, round(yval))\n",
     "            position += 3\n",
     "        position += 2\n",
     "    # ax.legend(fontsize=15, ncol=1)\n",
     "    # ax.grid(True)\n",
     "    plt.gca().yaxis.grid(True, linestyle='-.')\n",
-    "    if absolute_times is True:\n",
-    "        plt.ylabel('runtime [s]', fontsize=26)\n",
-    "        plt.ylim(0, None)\n",
-    "    else:\n",
-    "        plt.ylabel('speedup', fontsize=20)\n",
-    "        if with_outliers is False:\n",
-    "            plt.ylim(0, None)\n",
-    "    # plt.xlabel('# rows', fontsize=26)\n",
+    "    plt.ylabel('runtime [s]', fontsize=26)\n",
+    "    plt.ylim(0, None)\n",
     "    plt.xlabel('dataset + #rows', fontsize=20)\n",
     "    plt.xlim(0, None)\n",
     "    ax.set_xticks([2 + (len(classes_col2) + 2) * group1_index for group1_index, _ in enumerate(classes_col1)])\n",
@@ -263,18 +232,12 @@
     "\n",
     "    handles1 = []\n",
     "    handles2 = []\n",
-    "    # handles.append(patches.Patch( facecolor='grey',hatch=\"/\",label='no opt.'))\n",
-    "    # handles.append(patches.Patch( facecolor='grey',hatch=None,label='opt.'))\n",
     "    for class_index, (class2, color) in enumerate(zip(classes_col2, colors)):\n",
-    "        # class2_name = class2.replace(\" no opt.\", \"\")\n",
     "        if (class_index % 2) == 0:\n",
     "            handles1.append(patches.Patch(facecolor=color,edgecolor='white', hatch=\"/\",label=class2))\n",
     "        else:\n",
     "            handles2.append(patches.Patch(facecolor=color,hatch=None,label=class2))\n",
     "\n",
-    "        # patches.Patch( facecolor='grey',hatch=\"/\",label='no. opt')\n",
-    "        # line = plt.plot([], c=color, label=class2_name)[0]\n",
-    "        # handles.append(line)\n",
     "    plt.legend(fontsize=12, handles=handles1 + handles2, loc=\"upper right\", ncol=2)\n",
     "\n",
     "    plt.gcf().set_size_inches(8, 6)\n",
@@ -293,16 +256,8 @@
     "    'data_cleaning': 'data cleaning\\n(cleanml)',\n",
     "    'data_corruption': 'data corruption\\n(jenga)',\n",
     "}\n",
-    "model_map = {\n",
-    "    'logistic_regression': 'log. regression',\n",
-    "    'xgboost': 'xgboost',\n",
-    "    'neural_network': 'nn',\n",
-    "    'image': 'cnn',\n",
-    "}\n",
     "pretty_scenario_names = median_results.copy(deep=True)\n",
     "pretty_scenario_names['scenario'] = pretty_scenario_names['scenario'].map(scenario_names)\n",
-    "pretty_scenario_names['model'] = pretty_scenario_names['model'].map(model_map)\n",
-    "pretty_scenario_names['run'] = pretty_scenario_names['model'].map(model_map)\n",
     "\n",
     "manual = pretty_scenario_names.copy()\n",
     "manual['runtime'] = manual['median_manual'] / 1000\n",
@@ -319,13 +274,6 @@
     "no_opt['runtime'] = no_opt['median_no_opt_wo_orig'] / 1000\n",
     "no_opt['exec_variant'] = \"ml-mq no opt.\"\n",
     "\n",
-    "data_set_sort_order = {\n",
-    "    'healthcare': 0,\n",
-    "    'sneakers': 1,\n",
-    "    'folktables': 2,\n",
-    "    'cardio': 3,\n",
-    "    'reviews': 4,\n",
-    "}\n",
     "scenario_sort_order = {\n",
     "    'data corruption\\n(jenga)': 0,\n",
     "    'data cleaning\\n(cleanml)': 1,\n",
@@ -335,20 +283,12 @@
     "    'ml-mq no opt.': 1,\n",
     "    'ml-mq opt.': 2,\n",
     "}\n",
-    "data_set_row_count_map = {\n",
-    "    'healthcare': 'healthcare\\n(#1k)',\n",
-    "    'sneakers': 'sneakers\\n(#6k)',\n",
-    "    'folktables': 'folktables\\n(#30k)',\n",
-    "    'cardio': 'cardio\\n(#70k)',\n",
-    "    'reviews': 'reviews\\n(#100k)',\n",
-    "}\n",
     "opt_and_no_opt = pd.concat([with_opt, no_opt, manual], axis=0)\n",
-    "opt_and_no_opt[\"dataset_sort_order\"] = opt_and_no_opt[\"dataset\"].map(data_set_sort_order)\n",
     "opt_and_no_opt[\"scenario_sort_order\"] = opt_and_no_opt[\"scenario\"].map(scenario_sort_order)\n",
     "opt_and_no_opt[\"exec_variant_sort_order\"] = opt_and_no_opt[\"exec_variant\"].map(exec_variant_order)\n",
     "opt_and_no_opt = opt_and_no_opt.sort_values([\"scenario_sort_order\", \"exec_variant_sort_order\"])\n",
     "print(opt_and_no_opt)\n",
-    "speedup_bar_plot(opt_and_no_opt, 'runtime_w_and_wo_vs_jenga_and_cleanml', False, 'scenario', 'exec_variant', 'runtime', True)"
+    "speedup_bar_plot(opt_and_no_opt, 'runtime_w_and_wo_vs_jenga_and_cleanml', 'scenario', 'exec_variant', 'runtime')"
    ],
    "metadata": {
     "collapsed": false,
