--- a/demo/feature_overview/feature_overview.ipynb
+++ b/demo/feature_overview/feature_overview.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "from IPython.core.display import Image\n",
     "import os\n",
+    "from demo.feature_overview.clean_learn import Clean, ErrorType, CleanLearn\n",
     "from mlwhatif.utils import get_project_root\n",
     "\n",
     "EXAMPLE_COMPLEX_PATH = os.path.join(str(get_project_root()), \"demo\", \"feature_overview\",\n",
@@ -107,11 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -119,31 +119,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-14 15:06:23 INFO  Running instrumented original pipeline...\n",
-      "2022-10-14 15:06:23 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
-      "2022-10-14 15:06:24 INFO  ---RUNTIME: Importing and monkey-patching took 233.6430549621582 ms\n"
+      "2022-10-14 15:46:57 INFO  Running instrumented original pipeline...\n",
+      "2022-10-14 15:46:57 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
+      "2022-10-14 15:46:57 INFO  ---RUNTIME: Importing and monkey-patching took 218.49417686462402 ms\n",
+      "2022-10-14 15:46:59 INFO  ---RUNTIME: Original pipeline execution took 1304.999828338623 ms (excluding imports and monkey-patching)\n",
+      "2022-10-14 15:46:59 INFO  Starting execution of 1 what-if analyses...\n",
+      "2022-10-14 15:46:59 INFO  Start plan generation for analysis CleanLearn...\n",
+      "2022-10-14 15:46:59 INFO  ---RUNTIME: Plan generation took 0.5648136138916016 ms\n",
+      "2022-10-14 15:46:59 INFO  Estimated runtime of original DAG is 1261.9118690490723ms\n",
+      "2022-10-14 15:46:59 INFO  Performing Multi-Query Optimization\n",
+      "2022-10-14 15:46:59 INFO  Estimated unoptimized what-if runtime is 2523.8237380981445ms\n",
+      "2022-10-14 15:46:59 INFO  Estimated optimised what-if runtime is 1417.184829711914ms\n",
+      "2022-10-14 15:46:59 INFO  Estimated optimisation runtime saving is 1106.6389083862305ms\n",
+      "2022-10-14 15:46:59 INFO  ---RUNTIME: Multi-Query Optimization took 12.526988983154297 ms\n",
+      "2022-10-14 15:46:59 INFO  Executing generated plans\n",
+      "2022-10-14 15:47:00 INFO  ---RUNTIME: Execution took 1372.3456859588623 ms\n",
+      "2022-10-14 15:47:00 INFO  Done!\n"
      ]
     }
    ],
    "source": [
     "from mlwhatif import PipelineAnalyzer\n",
-    "from mlwhatif.analysis._data_corruption import DataCorruption, CorruptionType\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')  # To keep the output readable\n",
     "\n",
     "\n",
-    "robustness = DataCorruption([('smokes', CorruptionType.CATEGORICAL_SHIFT),\n",
-    "                             ('notes', CorruptionType.BROKEN_CHARACTERS),\n",
-    "                             ('weight', CorruptionType.SCALING)],\n",
-    "                             corruption_percentages=[0.33, 0.66, 1.0])\n",
+    "cleanlearn = CleanLearn(column=\"weight\", error=ErrorType.OUTLIER, constant=70, cleanings=[Clean.FILTER, Clean.IMPUTE])\n",
     "\n",
     "analysis_result = PipelineAnalyzer \\\n",
     "    .on_pipeline_from_py_file(DEMO_PY) \\\n",
-    "    .add_what_if_analysis(robustness) \\\n",
+    "    .add_what_if_analysis(cleanlearn) \\\n",
     "    .add_custom_monkey_patching_module(custom_monkeypatching) \\\n",
     "    .execute()\n",
     "\n",
-    "robustness_report = analysis_result.analysis_to_result_reports[robustness]"
+    "cleanlearn_report = analysis_result.analysis_to_result_reports[cleanlearn]"
    ]
   },
   {
@@ -157,16 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  corrupted_column     error cleaning_method  accuracy_score_L70\n0             None      None            None            0.748017\n1           weight  outliers          filter            0.748017\n2           weight  outliers          impute            0.748017",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>corrupted_column</th>\n      <th>error</th>\n      <th>cleaning_method</th>\n      <th>accuracy_score_L70</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>0.748017</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>filter</td>\n      <td>0.748017</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>weight</td>\n      <td>outliers</td>\n      <td>impute</td>\n      <td>0.748017</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "robustness_report"
+    "cleanlearn_report"
    ]
   },
   {
@@ -179,14 +197,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-14 15:47:00 INFO  Running instrumented original pipeline...\n",
+      "2022-10-14 15:47:00 INFO  Importing libraries and monkey-patching them... (Imports are slow if not in sys.modules cache yet!)\n",
+      "2022-10-14 15:47:00 INFO  ---RUNTIME: Importing and monkey-patching took 10.010957717895508 ms\n",
+      "2022-10-14 15:47:01 INFO  ---RUNTIME: Original pipeline execution took 905.5700302124023 ms (excluding imports and monkey-patching)\n",
+      "2022-10-14 15:47:01 INFO  Starting execution of 1 what-if analyses...\n",
+      "2022-10-14 15:47:01 INFO  Start plan generation for analysis PermutationFeatureImportance...\n",
+      "2022-10-14 15:47:01 INFO  ---RUNTIME: Plan generation took 0.16307830810546875 ms\n",
+      "2022-10-14 15:47:01 INFO  Estimated runtime of original DAG is 864.1781806945801ms\n",
+      "2022-10-14 15:47:01 INFO  Performing Multi-Query Optimization\n",
+      "2022-10-14 15:47:01 INFO  Estimated unoptimized what-if runtime is 2592.5345420837402ms\n",
+      "2022-10-14 15:47:01 INFO  Estimated optimised what-if runtime is 1003.4425258636475ms\n",
+      "2022-10-14 15:47:01 INFO  Estimated optimisation runtime saving is 1589.0920162200928ms\n",
+      "2022-10-14 15:47:01 INFO  ---RUNTIME: Multi-Query Optimization took 9.316682815551758 ms\n",
+      "2022-10-14 15:47:01 INFO  Executing generated plans\n",
+      "2022-10-14 15:47:02 INFO  ---RUNTIME: Execution took 1070.5480575561523 ms\n",
+      "2022-10-14 15:47:02 INFO  Done!\n"
+     ]
+    }
+   ],
    "source": [
     "from mlwhatif.analysis._permutation_feature_importance import PermutationFeatureImportance\n",
     "\n",
@@ -219,13 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'robustness' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/1x/7tjtf92157d00yflbr4s67f80000gn/T/ipykernel_15715/3756139148.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      7\u001B[0m \u001B[0manalysis_result\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mPipelineAnalyzer\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mon_pipeline_from_py_file\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mDEMO_PY\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 9\u001B[0;31m     \u001B[0;34m.\u001B[0m\u001B[0madd_what_if_analysis\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrobustness\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     10\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0madd_custom_monkey_patching_module\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcustom_monkeypatching\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'robustness' is not defined"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "from IPython.core.display import Image\n",
     "EXAMPLE_ORIGINAL_PLAN_PATH = os.path.join(str(get_project_root()), \"demo\", \"feature_overview\",\n",
@@ -254,8 +302,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -275,8 +322,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -296,8 +342,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
